[tool.poetry]
name = "habibi-airlines"
version = "0.1.0"
description = ""
authors = ["Alejandra Aguilera"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-wtf = "^0.14.3"
flask-bootstrap = "^3.3.7"
flask-login = "^0.5.0"
flask-bcrypt = "^0.7.1"
psycopg2-binary = "^2.8.5"
flask-sqlalchemy = "^2.4.1"
flask-static-digest = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-flask = "^1.0.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
